src/test/deca/context/invalid/decl_method_signature.deca
class A{
boolean method(int x,float y){
return x>y;
}
}
class B extends A{
boolean method(float a, float b){
return true;
}
}
